la fixation des ereur
